2002-12-14  Heikki Junes <hjunes@cc.hut.fi>

	* scm/output-lib.scm (modulo-bar-number-visible): add function.

	* Documentation/user/refman.itely: add modulo-bar-number-visible.

2002-12-10  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el: add shortcut for 2midi

	* lilypond-font-lock.el: fontify lyrics

2002-12-10  Rune Zedeler  <rz@daimi.au.dk>

	* scm/drums.scm : use 1.7.x names.

	* input/regression/drums.ly : Don't use << chords >>

2002-12-10  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el: tidy, add TODO

	* make/lilypond.mandrake.spec.in: install-info quietly.

2002-12-09  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/test/markup.ly: use new syntax.

2002-12-08  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* ly/params-init.ly (interscoreline): add word-space

	* input/test/metronome.ly (eighthNote): idem.

	* input/test/script-priority.ly: use new markup

	* lily/parser.yy (markup): allow HEAD markup0 markup1 

	* lily/molecule-scheme.cc (ly:molecule-translate): new function.

	* lily/parser.yy (gen_text_def): bugfix.
	(full_markup): allow markup identifier.

2002-12-09  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el (LilyPond-kill-job): Kill all Lilypond compiling
	jobs at the same time. Add horizontal lines to Command menu.
	Allow one compiling job -- propose killing others before a new one.

	* lilypond.words: add markup, teeny, etc.

2002-12-08  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el: Use LilyPond-command-alist for Midi and MidiAll.
	Allow only one type of midi process; launching Midi either stops
	midis or plays the current midi and launching MidiAll stops midis
	and starts timidity with "-ia", i.e., XAW-interface. Bind C-c C-return 
	to MidiAll. Choose "timidity-[1-9].ly" etc. files to MidiAll.

2002-12-07  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/text-engraver.cc (process_acknowledged_grobs): use new
	markup  for new markup texts.

	* lily/mark-engraver.cc (process_music): idem
	